@@ -1,0 +1,23 @@
+public function filters()
+{
+	return array(
+			'accessControl', 
+			);
+}
+
+public function accessRules()
+{
+	return array(
+			array('allow', 
+				'actions'=>array('index', 'view'),
+				'users'=>array('@'),
+				),
+			array('allow', 
+				'actions'=>array('create', 'update', 'admin', 'delete'),
+				'users'=>array('admin'),
+				),
+			array('deny', 
+				'users'=>array('*'),
+				),
+			);
+}
